refactor: simplify canvas action prompts in multiple languages for consistency and clarity

--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -1066,16 +1066,16 @@
         "9": "Erstelle einen umfassenden Styleguide für Marke und Content"
       },
       "canvas": {
-        "0": "Erstelle ein Social-Media-Banner für mein Tech-Startup mit einer futuristischen Stadtsilhouette und Neon-Akzenten",
-        "1": "Designe ein minimalistisches Logo für eine Kaffeemarke namens 'Morning Ritual' in Erdtönen",
-        "2": "Bearbeite dieses Produktfoto, um den Hintergrund zu entfernen und einen sanften Verlauf hinzuzufügen",
-        "3": "Erstelle eine Infografik über die Vorteile erneuerbarer Energien im modernen Flat-Design",
-        "4": "Designe ein Buchcover für einen Sci-Fi-Roman über KI-Bewusstsein im Cyberpunk-Stil",
-        "5": "Erstelle ein YouTube-Thumbnail für ein Video über Produktivitätstipps mit fetter Textüberlagerung",
-        "6": "Erstelle ein Moodboard für eine Luxus-Modemarke für Millennials",
-        "7": "Designe eine Hochzeitseinladung mit eleganten Blumenmustern und Goldakzenten",
-        "8": "Bearbeite mein Porträtfoto für einen Vintage-Film-Look mit Körnung und warmen Tönen",
-        "9": "Erstelle ein Posterdesign für ein Musikfestival im psychedelischen 70er-Jahre-Stil"
+        "0": "Erstelle ein Social-Media-Banner mit futuristischer Stadtsilhouette",
+        "1": "Designe ein minimalistisches Kaffeemarken-Logo in Erdtönen",
+        "2": "Hintergrund entfernen und sanften Verlauf zum Produktfoto hinzufügen",
+        "3": "Erstelle eine Infografik zu erneuerbaren Energien im Flat-Design",
+        "4": "Designe ein Sci-Fi-Buchcover im Cyberpunk-Stil",
+        "5": "Erstelle ein YouTube-Thumbnail über Produktivitätstipps mit fettem Text",
+        "6": "Erstelle ein Luxus-Mode-Moodboard für Millennials",
+        "7": "Designe eine elegante Hochzeitseinladung mit Blumenmustern",
+        "8": "Bearbeite Porträtfoto für Vintage-Film-Look mit Körnung und warmen Tönen",
+        "9": "Erstelle ein Musikfestival-Poster im psychedelischen 70er-Jahre-Stil"
       },
       "video": {
         "0": "Animiere mein Produktfoto mit sanfter Rotation und Studiobeleuchtung",
