--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -1155,16 +1155,16 @@
         "9": "Crear una guía de estilo completa para marca y contenido"
       },
       "canvas": {
-        "0": "Crear un banner de redes sociales para mi startup tecnológica con un horizonte urbano futurista con acentos de neón",
-        "1": "Diseñar un logo minimalista para una marca de café llamada 'Morning Ritual' usando tonos tierra",
-        "2": "Editar esta foto de producto para eliminar el fondo y agregar un degradado suave",
-        "3": "Crear una infografía mostrando los beneficios de la energía renovable con diseño plano moderno",
-        "4": "Diseñar una portada de libro para una novela de ciencia ficción sobre conciencia de IA con estética cyberpunk",
-        "5": "Hacer una miniatura de YouTube para un video sobre consejos de productividad con superposición de texto en negrita",
-        "6": "Crear un moodboard para una marca de moda de lujo dirigida a millennials",
-        "7": "Diseñar una invitación de boda con elegantes patrones florales y acentos dorados",
-        "8": "Editar mi foto de retrato para tener un aspecto de película vintage con grano y tonos cálidos",
-        "9": "Crear un diseño de póster para un festival de música con vibras psicodélicas de los 70"
+        "0": "Crear un banner de redes sociales con horizonte urbano futurista",
+        "1": "Diseñar un logo minimalista de marca de café usando tonos tierra",
+        "2": "Eliminar el fondo y agregar degradado suave a foto de producto",
+        "3": "Crear una infografía de energía renovable con diseño plano",
+        "4": "Diseñar una portada de libro de ciencia ficción con estética cyberpunk",
+        "5": "Hacer una miniatura de YouTube de consejos de productividad con texto en negrita",
+        "6": "Crear un moodboard de moda de lujo para millennials",
+        "7": "Diseñar una invitación de boda elegante con patrones florales",
+        "8": "Editar retrato con aspecto de película vintage con grano y tonos cálidos",
+        "9": "Crear un póster de festival de música con vibras psicodélicas de los 70"
       },
       "video": {
         "0": "Anima mi foto de producto rotando suavemente con iluminación de estudio",
