--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -1155,16 +1155,16 @@
         "9": "Créer un guide de style complet pour la marque et le contenu"
       },
       "canvas": {
-        "0": "Créer une bannière de réseaux sociaux pour ma startup tech avec un horizon urbain futuriste et des accents néon",
-        "1": "Concevoir un logo minimaliste pour une marque de café appelée 'Morning Ritual' avec des tons terreux",
-        "2": "Modifier cette photo de produit pour supprimer l'arrière-plan et ajouter un dégradé doux",
-        "3": "Créer une infographie montrant les avantages de l'énergie renouvelable avec un design plat moderne",
-        "4": "Concevoir une couverture de livre pour un roman de science-fiction sur la conscience de l'IA avec une esthétique cyberpunk",
-        "5": "Faire une miniature YouTube pour une vidéo sur les conseils de productivité avec une superposition de texte en gras",
-        "6": "Créer un moodboard pour une marque de mode de luxe ciblant les millennials",
-        "7": "Concevoir un faire-part de mariage avec des motifs floraux élégants et des accents dorés",
-        "8": "Modifier ma photo portrait pour avoir un look film vintage avec du grain et des tons chauds",
-        "9": "Créer un design d'affiche pour un festival de musique avec des vibrations psychédéliques des années 70"
+        "0": "Créer une bannière de réseaux sociaux avec horizon urbain futuriste",
+        "1": "Concevoir un logo minimaliste de marque de café avec tons terreux",
+        "2": "Supprimer l'arrière-plan et ajouter un dégradé doux à la photo produit",
+        "3": "Créer une infographie sur l'énergie renouvelable avec design plat",
+        "4": "Concevoir une couverture de livre de science-fiction avec esthétique cyberpunk",
+        "5": "Faire une miniature YouTube sur les conseils de productivité avec texte gras",
+        "6": "Créer un moodboard de mode de luxe pour millennials",
+        "7": "Concevoir un faire-part de mariage élégant avec motifs floraux",
+        "8": "Modifier portrait pour avoir un look film vintage avec grain et tons chauds",
+        "9": "Créer une affiche de festival de musique avec vibrations psychédéliques des années 70"
       },
       "video": {
         "0": "Anime ma photo produit en rotation douce avec éclairage studio",
