--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -1068,16 +1068,16 @@
         "9": "Crea una guida di stile completa per brand e contenuti"
       },
       "canvas": {
-        "0": "Crea un banner per i social media per la mia startup tech con uno skyline cittadino futuristico e accenti neon",
-        "1": "Progetta un logo minimalista per un brand di caffè chiamato 'Morning Ritual' usando toni della terra",
-        "2": "Modifica questa foto prodotto per rimuovere lo sfondo e aggiungere un gradiente morbido",
-        "3": "Crea un'infografica che mostra i benefici dell'energia rinnovabile con design flat moderno",
-        "4": "Progetta una copertina per un romanzo di fantascienza sulla coscienza dell'IA con estetica cyberpunk",
-        "5": "Crea una miniatura YouTube per un video sui consigli di produttività con overlay di testo in grassetto",
-        "6": "Crea un moodboard per un brand di moda di lusso rivolto ai millennials",
-        "7": "Progetta un invito di matrimonio con eleganti motivi floreali e accenti dorati",
-        "8": "Modifica la mia foto ritratto per avere un aspetto film vintage con grana e toni caldi",
-        "9": "Crea un design poster per un festival musicale con vibrazioni psichedeliche anni '70"
+        "0": "Crea un banner per social media con skyline cittadino futuristico",
+        "1": "Progetta un logo minimalista per brand di caffè usando toni della terra",
+        "2": "Rimuovi lo sfondo e aggiungi gradiente morbido alla foto prodotto",
+        "3": "Crea un'infografica sull'energia rinnovabile con design flat",
+        "4": "Progetta una copertina per romanzo di fantascienza con estetica cyberpunk",
+        "5": "Crea una miniatura YouTube sui consigli di produttività con testo in grassetto",
+        "6": "Crea un moodboard di moda di lusso per millennials",
+        "7": "Progetta un invito di matrimonio elegante con motivi floreali",
+        "8": "Modifica ritratto per avere aspetto film vintage con grana e toni caldi",
+        "9": "Crea un poster per festival musicale con vibrazioni psichedeliche anni '70"
       },
       "video": {
         "0": "Anima la mia foto prodotto ruotando dolcemente con illuminazione da studio",
