--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -1155,16 +1155,16 @@
         "9": "ブランドとコンテンツの包括的なスタイルガイドを作成"
       },
       "canvas": {
-        "0": "ネオンアクセントを備えた未来的な都市スカイラインを特徴とするテックスタートアップ向けのソーシャルメディアバナーを作成",
-        "1": "「Morning Ritual」というコーヒーブランドのミニマリストロゴをアースカラーでデザイン",
-        "2": "この製品写真を編集して背景を削除し、ソフトなグラデーションを追加",
-        "3": "モダンなフラットデザインで再生可能エネルギーのメリットを示すインフォグラフィックを作成",
-        "4": "AI意識についてのSF小説のブックカバーをサイバーパンクの美学でデザイン",
-        "5": "太字のテキストオーバーレイを使用した生産性のヒントに関するビデオ用のYouTubeサムネイルを作成",
-        "6": "ミレニアル世代をターゲットにしたラグジュアリーファッションブランドのムードボードを作成",
-        "7": "エレガントなフローラルパターンとゴールドアクセントを使用したウェディング招待状をデザイン",
-        "8": "ヴィンテージフィルムルックでグレインと暖かいトーンを持つポートレート写真を編集",
-        "9": "70年代のサイケデリックな雰囲気の音楽フェスティバルのポスターデザインを作成"
+        "0": "未来的な都市スカイラインのソーシャルメディアバナーを作成",
+        "1": "アースカラーを使ったミニマリストなコーヒーブランドロゴをデザイン",
+        "2": "製品写真の背景を削除しソフトなグラデーションを追加",
+        "3": "フラットデザインで再生可能エネルギーのインフォグラフィックを作成",
+        "4": "サイバーパンク美学のSF小説ブックカバーをデザイン",
+        "5": "太字テキスト付き生産性ヒントYouTubeサムネイルを作成",
+        "6": "ミレニアル世代向けラグジュアリーファッションムードボードを作成",
+        "7": "エレガントなフローラルパターンのウェディング招待状をデザイン",
+        "8": "グレインと暖色調でポートレートをヴィンテージフィルムルックに編集",
+        "9": "70年代サイケデリック雰囲気の音楽フェスティバルポスターを作成"
       },
       "video": {
         "0": "製品写真をスタジオ照明で滑らかに回転アニメーション",
