--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -1155,16 +1155,16 @@
         "9": "Criar um guia de estilo abrangente para marca e conteúdo"
       },
       "canvas": {
-        "0": "Criar um banner de mídia social para minha startup de tecnologia apresentando um horizonte urbano futurista com acentos neon",
-        "1": "Desenhar um logo minimalista para uma marca de café chamada 'Morning Ritual' usando tons terrosos",
-        "2": "Editar esta foto de produto para remover o fundo e adicionar um gradiente suave",
-        "3": "Criar um infográfico mostrando os benefícios da energia renovável com design flat moderno",
-        "4": "Desenhar uma capa de livro para um romance de ficção científica sobre consciência de IA com estética cyberpunk",
-        "5": "Fazer uma miniatura do YouTube para um vídeo sobre dicas de produtividade com sobreposição de texto em negrito",
-        "6": "Criar um moodboard para uma marca de moda de luxo direcionada a millennials",
-        "7": "Desenhar um convite de casamento com padrões florais elegantes e acentos dourados",
-        "8": "Editar minha foto de retrato para ter um visual de filme vintage com grão e tons quentes",
-        "9": "Criar um design de pôster para um festival de música com vibrações psicodélicas dos anos 70"
+        "0": "Criar um banner de mídia social com horizonte urbano futurista",
+        "1": "Desenhar um logo minimalista de marca de café usando tons terrosos",
+        "2": "Remover o fundo e adicionar gradiente suave à foto de produto",
+        "3": "Criar um infográfico de energia renovável com design flat",
+        "4": "Desenhar uma capa de livro de ficção científica com estética cyberpunk",
+        "5": "Fazer uma miniatura do YouTube de dicas de produtividade com texto em negrito",
+        "6": "Criar um moodboard de moda de luxo para millennials",
+        "7": "Desenhar um convite de casamento elegante com padrões florais",
+        "8": "Editar retrato para visual de filme vintage com grão e tons quentes",
+        "9": "Criar um pôster de festival de música com vibrações psicodélicas dos anos 70"
       },
       "video": {
         "0": "Anime minha foto de produto girando suavemente com iluminação de estúdio",
