--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -1155,16 +1155,16 @@
         "9": "创建涵盖品牌和内容的全面风格指南"
       },
       "canvas": {
-        "0": "为我的科技创业公司创建一个社交媒体横幅，展示未来主义城市天际线和霓虹灯点缀",
-        "1": "使用大地色调为名为「Morning Ritual」的咖啡品牌设计极简主义标志",
-        "2": "编辑此产品照片以移除背景并添加柔和渐变",
-        "3": "用现代扁平设计创建一个展示可再生能源优势的信息图",
-        "4": "为一部关于 AI 意识的科幻小说设计带有赛博朋克美学的书籍封面",
-        "5": "为一个关于生产力技巧的视频制作带有粗体文字叠加的 YouTube 缩略图",
-        "6": "为针对千禧一代的奢侈时尚品牌创建情绪板",
-        "7": "设计带有优雅花卉图案和金色点缀的婚礼请柬",
-        "8": "编辑我的肖像照片，使其具有带颗粒和暖色调的复古胶片效果",
-        "9": "为音乐节创建带有 70 年代迷幻氛围的海报设计"
+        "0": "创建带有未来主义城市天际线的社交媒体横幅",
+        "1": "使用大地色调设计极简主义咖啡品牌标志",
+        "2": "移除背景并为产品照片添加柔和渐变",
+        "3": "用扁平设计创建可再生能源信息图",
+        "4": "设计带有赛博朋克美学的科幻小说封面",
+        "5": "制作带有粗体文字的生产力技巧 YouTube 缩略图",
+        "6": "为千禧一代创建奢侈时尚情绪板",
+        "7": "设计带有花卉图案的优雅婚礼请柬",
+        "8": "将肖像编辑为带颗粒和暖色调的复古胶片效果",
+        "9": "创建带有 70 年代迷幻氛围的音乐节海报"
       },
       "video": {
         "0": "用工作室灯光将我的产品照片平滑旋转动画化",
