--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -1163,16 +1163,16 @@
         "9": "Create a comprehensive style guide for brand and content"
       },
       "canvas": {
-        "0": "Create a social media banner for my tech startup featuring a futuristic city skyline with neon accents",
-        "1": "Design a minimalist logo for a coffee brand called 'Morning Ritual' using earthy tones",
-        "2": "Edit this product photo to remove the background and add a soft gradient",
-        "3": "Create an infographic showing the benefits of renewable energy with modern flat design",
-        "4": "Design a book cover for a sci-fi novel about AI consciousness with cyberpunk aesthetics",
-        "5": "Make a YouTube thumbnail for a video about productivity tips with bold text overlay",
-        "6": "Create a mood board for a luxury fashion brand targeting millennials",
-        "7": "Design a wedding invitation with elegant floral patterns and gold accents",
-        "8": "Edit my portrait photo to have a vintage film look with grain and warm tones",
-        "9": "Create a poster design for a music festival with psychedelic 70s vibes"
+        "0": "Create a social media banner with futuristic city skyline",
+        "1": "Design a minimalist coffee brand logo using earthy tones",
+        "2": "Remove background and add soft gradient to product photo",
+        "3": "Create a renewable energy infographic with flat design",
+        "4": "Design a sci-fi book cover with cyberpunk aesthetics",
+        "5": "Make a productivity tips YouTube thumbnail with bold text",
+        "6": "Create a luxury fashion mood board for millennials",
+        "7": "Design an elegant wedding invitation with floral patterns",
+        "8": "Edit portrait to vintage film look with grain and warm tones",
+        "9": "Create a music festival poster with psychedelic 70s vibes"
       },
       "video": {
         "0": "Animate my product photo rotating smoothly with studio lighting",
