refactor: update canvas action prompts for improved clarity and consistency across multiple languages

--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -1066,16 +1066,16 @@
         "9": "Erstelle einen umfassenden Styleguide für Marke und Content"
       },
       "canvas": {
-        "0": "Erstelle ein Social-Media-Banner mit futuristischer Stadtsilhouette",
-        "1": "Designe ein minimalistisches Kaffeemarken-Logo in Erdtönen",
-        "2": "Hintergrund entfernen und sanften Verlauf zum Produktfoto hinzufügen",
-        "3": "Erstelle eine Infografik zu erneuerbaren Energien im Flat-Design",
-        "4": "Designe ein Sci-Fi-Buchcover im Cyberpunk-Stil",
-        "5": "Erstelle ein YouTube-Thumbnail über Produktivitätstipps mit fettem Text",
-        "6": "Erstelle ein Luxus-Mode-Moodboard für Millennials",
-        "7": "Designe eine elegante Hochzeitseinladung mit Blumenmustern",
-        "8": "Bearbeite Porträtfoto für Vintage-Film-Look mit Körnung und warmen Tönen",
-        "9": "Erstelle ein Musikfestival-Poster im psychedelischen 70er-Jahre-Stil"
+        "0": "Füge ein Tech-Startup-Banner zur Canvas mit futuristischer Stadtsilhouette hinzu",
+        "1": "Erstelle ein Kaffeemarken-Logo auf Canvas im minimalistischen Erdton-Stil",
+        "2": "Füge mein Produktfoto zur Canvas hinzu und entferne den Hintergrund",
+        "3": "Designe eine Infografik zu erneuerbaren Energien auf Canvas mit flachen Icons",
+        "4": "Erstelle ein Sci-Fi-Buchcover auf Canvas im Cyberpunk-Stil",
+        "5": "Füge ein YouTube-Thumbnail zur Canvas für Produktivitätstipps-Video hinzu",
+        "6": "Erstelle ein Luxus-Mode-Moodboard auf Canvas für Millennials",
+        "7": "Designe eine elegante Hochzeitseinladung auf Canvas mit Blumenmustern",
+        "8": "Füge mein Porträt zur Canvas hinzu und wende Vintage-Film-Effekt an",
+        "9": "Erstelle ein Musikfestival-Poster auf Canvas mit psychedelischem Vibe"
       },
       "video": {
         "0": "Animiere mein Produktfoto mit sanfter Rotation und Studiobeleuchtung",
