--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -1163,16 +1163,16 @@
         "9": "Create a comprehensive style guide for brand and content"
       },
       "canvas": {
-        "0": "Create a social media banner with futuristic city skyline",
-        "1": "Design a minimalist coffee brand logo using earthy tones",
-        "2": "Remove background and add soft gradient to product photo",
-        "3": "Create a renewable energy infographic with flat design",
-        "4": "Design a sci-fi book cover with cyberpunk aesthetics",
-        "5": "Make a productivity tips YouTube thumbnail with bold text",
-        "6": "Create a luxury fashion mood board for millennials",
-        "7": "Design an elegant wedding invitation with floral patterns",
-        "8": "Edit portrait to vintage film look with grain and warm tones",
-        "9": "Create a music festival poster with psychedelic 70s vibes"
+        "0": "Add a tech startup banner to canvas with futuristic city skyline",
+        "1": "Create a coffee brand logo on canvas using earthy minimalist style",
+        "2": "Add my product photo to canvas and remove its background",
+        "3": "Design a renewable energy infographic on canvas with flat icons",
+        "4": "Create a sci-fi book cover on canvas with cyberpunk aesthetics",
+        "5": "Add a YouTube thumbnail to canvas for productivity tips video",
+        "6": "Build a luxury fashion mood board on canvas for millennials",
+        "7": "Design an elegant wedding invitation on canvas with floral patterns",
+        "8": "Add my portrait to canvas and apply vintage film effect",
+        "9": "Create a music festival poster on canvas with psychedelic vibes"
       },
       "video": {
         "0": "Animate my product photo rotating smoothly with studio lighting",
