--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -1155,16 +1155,16 @@
         "9": "Crear una guía de estilo completa para marca y contenido"
       },
       "canvas": {
-        "0": "Crear un banner de redes sociales con horizonte urbano futurista",
-        "1": "Diseñar un logo minimalista de marca de café usando tonos tierra",
-        "2": "Eliminar el fondo y agregar degradado suave a foto de producto",
-        "3": "Crear una infografía de energía renovable con diseño plano",
-        "4": "Diseñar una portada de libro de ciencia ficción con estética cyberpunk",
-        "5": "Hacer una miniatura de YouTube de consejos de productividad con texto en negrita",
-        "6": "Crear un moodboard de moda de lujo para millennials",
-        "7": "Diseñar una invitación de boda elegante con patrones florales",
-        "8": "Editar retrato con aspecto de película vintage con grano y tonos cálidos",
-        "9": "Crear un póster de festival de música con vibras psicodélicas de los 70"
+        "0": "Agregar un banner de startup tech al canvas con horizonte urbano futurista",
+        "1": "Crear un logo de marca de café en canvas con estilo minimalista terroso",
+        "2": "Agregar mi foto de producto al canvas y eliminar el fondo",
+        "3": "Diseñar una infografía de energía renovable en canvas con iconos planos",
+        "4": "Crear una portada de libro de ciencia ficción en canvas con estética cyberpunk",
+        "5": "Agregar una miniatura de YouTube al canvas para video de productividad",
+        "6": "Construir un moodboard de moda de lujo en canvas para millennials",
+        "7": "Diseñar una invitación de boda elegante en canvas con patrones florales",
+        "8": "Agregar mi retrato al canvas y aplicar efecto de película vintage",
+        "9": "Crear un póster de festival de música en canvas con vibras psicodélicas"
       },
       "video": {
         "0": "Anima mi foto de producto rotando suavemente con iluminación de estudio",
