--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -1155,16 +1155,16 @@
         "9": "Créer un guide de style complet pour la marque et le contenu"
       },
       "canvas": {
-        "0": "Créer une bannière de réseaux sociaux avec horizon urbain futuriste",
-        "1": "Concevoir un logo minimaliste de marque de café avec tons terreux",
-        "2": "Supprimer l'arrière-plan et ajouter un dégradé doux à la photo produit",
-        "3": "Créer une infographie sur l'énergie renouvelable avec design plat",
-        "4": "Concevoir une couverture de livre de science-fiction avec esthétique cyberpunk",
-        "5": "Faire une miniature YouTube sur les conseils de productivité avec texte gras",
-        "6": "Créer un moodboard de mode de luxe pour millennials",
-        "7": "Concevoir un faire-part de mariage élégant avec motifs floraux",
-        "8": "Modifier portrait pour avoir un look film vintage avec grain et tons chauds",
-        "9": "Créer une affiche de festival de musique avec vibrations psychédéliques des années 70"
+        "0": "Ajouter une bannière de startup tech au canvas avec horizon urbain futuriste",
+        "1": "Créer un logo de marque de café sur canvas avec style minimaliste terreux",
+        "2": "Ajouter ma photo produit au canvas et supprimer l'arrière-plan",
+        "3": "Concevoir une infographie sur l'énergie renouvelable sur canvas avec icônes plates",
+        "4": "Créer une couverture de livre de science-fiction sur canvas avec esthétique cyberpunk",
+        "5": "Ajouter une miniature YouTube au canvas pour vidéo de conseils de productivité",
+        "6": "Construire un moodboard de mode de luxe sur canvas pour millennials",
+        "7": "Concevoir un faire-part de mariage élégant sur canvas avec motifs floraux",
+        "8": "Ajouter mon portrait au canvas et appliquer effet film vintage",
+        "9": "Créer une affiche de festival de musique sur canvas avec vibrations psychédéliques"
       },
       "video": {
         "0": "Anime ma photo produit en rotation douce avec éclairage studio",
