--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -1068,16 +1068,16 @@
         "9": "Crea una guida di stile completa per brand e contenuti"
       },
       "canvas": {
-        "0": "Crea un banner per social media con skyline cittadino futuristico",
-        "1": "Progetta un logo minimalista per brand di caffè usando toni della terra",
-        "2": "Rimuovi lo sfondo e aggiungi gradiente morbido alla foto prodotto",
-        "3": "Crea un'infografica sull'energia rinnovabile con design flat",
-        "4": "Progetta una copertina per romanzo di fantascienza con estetica cyberpunk",
-        "5": "Crea una miniatura YouTube sui consigli di produttività con testo in grassetto",
-        "6": "Crea un moodboard di moda di lusso per millennials",
-        "7": "Progetta un invito di matrimonio elegante con motivi floreali",
-        "8": "Modifica ritratto per avere aspetto film vintage con grana e toni caldi",
-        "9": "Crea un poster per festival musicale con vibrazioni psichedeliche anni '70"
+        "0": "Aggiungi un banner per startup tech al canvas con skyline cittadino futuristico",
+        "1": "Crea un logo per brand di caffè su canvas con stile minimalista terroso",
+        "2": "Aggiungi la mia foto prodotto al canvas e rimuovi lo sfondo",
+        "3": "Progetta un'infografica sull'energia rinnovabile su canvas con icone flat",
+        "4": "Crea una copertina per romanzo di fantascienza su canvas con estetica cyberpunk",
+        "5": "Aggiungi una miniatura YouTube al canvas per video su produttività",
+        "6": "Costruisci un moodboard di moda di lusso su canvas per millennials",
+        "7": "Progetta un invito di matrimonio elegante su canvas con motivi floreali",
+        "8": "Aggiungi il mio ritratto al canvas e applica effetto film vintage",
+        "9": "Crea un poster per festival musicale su canvas con vibrazioni psichedeliche"
       },
       "video": {
         "0": "Anima la mia foto prodotto ruotando dolcemente con illuminazione da studio",
