--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -1155,16 +1155,16 @@
         "9": "ブランドとコンテンツの包括的なスタイルガイドを作成"
       },
       "canvas": {
-        "0": "未来的な都市スカイラインのソーシャルメディアバナーを作成",
-        "1": "アースカラーを使ったミニマリストなコーヒーブランドロゴをデザイン",
-        "2": "製品写真の背景を削除しソフトなグラデーションを追加",
-        "3": "フラットデザインで再生可能エネルギーのインフォグラフィックを作成",
-        "4": "サイバーパンク美学のSF小説ブックカバーをデザイン",
-        "5": "太字テキスト付き生産性ヒントYouTubeサムネイルを作成",
-        "6": "ミレニアル世代向けラグジュアリーファッションムードボードを作成",
-        "7": "エレガントなフローラルパターンのウェディング招待状をデザイン",
-        "8": "グレインと暖色調でポートレートをヴィンテージフィルムルックに編集",
-        "9": "70年代サイケデリック雰囲気の音楽フェスティバルポスターを作成"
+        "0": "未来的な都市スカイラインのテックスタートアップバナーをキャンバスに追加",
+        "1": "ミニマルなアースカラーのコーヒーブランドロゴをキャンバス上に作成",
+        "2": "製品写真をキャンバスに追加して背景を削除",
+        "3": "フラットアイコンで再生可能エネルギーのインフォグラフィックをキャンバスにデザイン",
+        "4": "サイバーパンク美学のSF小説カバーをキャンバス上に作成",
+        "5": "生産性ヒント動画用YouTubeサムネイルをキャンバスに追加",
+        "6": "ミレニアル世代向けラグジュアリーファッションムードボードをキャンバスに構築",
+        "7": "エレガントなフローラルパターンのウェディング招待状をキャンバスにデザイン",
+        "8": "ポートレートをキャンバスに追加してヴィンテージフィルム効果を適用",
+        "9": "サイケデリックな雰囲気の音楽フェスティバルポスターをキャンバスに作成"
       },
       "video": {
         "0": "製品写真をスタジオ照明で滑らかに回転アニメーション",
