--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -1155,16 +1155,16 @@
         "9": "Criar um guia de estilo abrangente para marca e conteúdo"
       },
       "canvas": {
-        "0": "Criar um banner de mídia social com horizonte urbano futurista",
-        "1": "Desenhar um logo minimalista de marca de café usando tons terrosos",
-        "2": "Remover o fundo e adicionar gradiente suave à foto de produto",
-        "3": "Criar um infográfico de energia renovável com design flat",
-        "4": "Desenhar uma capa de livro de ficção científica com estética cyberpunk",
-        "5": "Fazer uma miniatura do YouTube de dicas de produtividade com texto em negrito",
-        "6": "Criar um moodboard de moda de luxo para millennials",
-        "7": "Desenhar um convite de casamento elegante com padrões florais",
-        "8": "Editar retrato para visual de filme vintage com grão e tons quentes",
-        "9": "Criar um pôster de festival de música com vibrações psicodélicas dos anos 70"
+        "0": "Adicionar um banner de startup tech ao canvas com horizonte urbano futurista",
+        "1": "Criar um logo de marca de café no canvas com estilo minimalista terroso",
+        "2": "Adicionar minha foto de produto ao canvas e remover o fundo",
+        "3": "Desenhar um infográfico de energia renovável no canvas com ícones flat",
+        "4": "Criar uma capa de livro de ficção científica no canvas com estética cyberpunk",
+        "5": "Adicionar uma miniatura do YouTube ao canvas para vídeo de produtividade",
+        "6": "Construir um moodboard de moda de luxo no canvas para millennials",
+        "7": "Desenhar um convite de casamento elegante no canvas com padrões florais",
+        "8": "Adicionar meu retrato ao canvas e aplicar efeito de filme vintage",
+        "9": "Criar um pôster de festival de música no canvas com vibrações psicodélicas"
       },
       "video": {
         "0": "Anime minha foto de produto girando suavemente com iluminação de estúdio",
