--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -1155,16 +1155,16 @@
         "9": "创建涵盖品牌和内容的全面风格指南"
       },
       "canvas": {
-        "0": "创建带有未来主义城市天际线的社交媒体横幅",
-        "1": "使用大地色调设计极简主义咖啡品牌标志",
-        "2": "移除背景并为产品照片添加柔和渐变",
-        "3": "用扁平设计创建可再生能源信息图",
-        "4": "设计带有赛博朋克美学的科幻小说封面",
-        "5": "制作带有粗体文字的生产力技巧 YouTube 缩略图",
-        "6": "为千禧一代创建奢侈时尚情绪板",
-        "7": "设计带有花卉图案的优雅婚礼请柬",
-        "8": "将肖像编辑为带颗粒和暖色调的复古胶片效果",
-        "9": "创建带有 70 年代迷幻氛围的音乐节海报"
+        "0": "向画布添加带有未来主义城市天际线的科技创业公司横幅",
+        "1": "在画布上创建大地色调极简风格的咖啡品牌标志",
+        "2": "将我的产品照片添加到画布并移除背景",
+        "3": "在画布上设计带有扁平图标的可再生能源信息图",
+        "4": "在画布上创建带有赛博朋克美学的科幻小说封面",
+        "5": "向画布添加生产力技巧视频的 YouTube 缩略图",
+        "6": "在画布上为千禧一代构建奢侈时尚情绪板",
+        "7": "在画布上设计带有花卉图案的优雅婚礼请柬",
+        "8": "将我的肖像添加到画布并应用复古胶片效果",
+        "9": "在画布上创建带有迷幻氛围的音乐节海报"
       },
       "video": {
         "0": "用工作室灯光将我的产品照片平滑旋转动画化",
